// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Support /> should render with notification contacts 1`] = `
<Fragment>
  <Card
    className="ocm-c-support-notification-contacts__card"
  >
    <CardTitle
      className="ocm-c-support-notification-contacts__card--header"
    >
      <Title
        className="card-title"
        headingLevel="h2"
      >
        Notification contacts
      </Title>
      <div
        className="support-subtitle"
      >
        Add users to be contacted in the event of notifications about this cluster.
      </div>
    </CardTitle>
    <CardBody
      className="ocm-c-support-notification-contacts__card--body"
    >
      <AddNotificationContactButton
        canEdit={true}
        openModal={[MockFunction]}
      />
      <Connect(NotificationContactsCard)
        addContactResponse={Object {}}
        addNotificationToaster={[MockFunction]}
        clearDeleteNotificationContacts={[MockFunction]}
        clearNotificationContacts={[MockFunction]}
        deleteContactResponse={Object {}}
        deleteNotificationContact={[MockFunction]}
        getNotificationContacts={[MockFunction]}
        hasContacts={false}
        isDisabled={false}
        notificationContacts={
          Object {
            "contacts": Array [
              Object {
                "email": "***REMOVED***",
                "firstName": "Liran",
                "lastName": "Roitman",
                "userID": "1VW00yfnFuhoybNRBqF86RyS2h6",
                "username": "lroitman.openshift",
              },
              Object {
                "email": "***REMOVED***",
                "firstName": "Timothy",
                "lastName": "Williams",
                "userID": "1NjzrgHzgOHK0pGi6zxPfhC7PQV",
                "username": "tiwillia.openshift",
              },
            ],
            "pending": false,
            "subscriptionID": "",
          }
        }
        subscriptionID="1iGW3xYbKZAEdZLi207rcA1l0ob"
      />
    </CardBody>
  </Card>
  <Card
    className="ocm-c-support-support-cases__card"
  >
    <CardTitle
      className="ocm-c-support-support-cases__card--header"
    >
      <Title
        className="card-title"
        headingLevel="h2"
      >
        Support cases
      </Title>
    </CardTitle>
    <CardBody
      className="ocm-c-support-support-cases__card--body"
    >
      <Connect(SupportCasesCard)
        getSupportCases={[MockFunction]}
        isDisabled={false}
        subscriptionID="1iGW3xYbKZAEdZLi207rcA1l0ob"
        supportCases={
          Object {
            "cases": Array [],
            "pending": false,
            "subscriptionID": "1iGW3xYbKZAEdZLi207rcA1l0ob",
          }
        }
      />
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<Support /> should render without notification contacts 1`] = `
<Fragment>
  <Card
    className="ocm-c-support-notification-contacts__card"
  >
    <CardTitle
      className="ocm-c-support-notification-contacts__card--header"
    >
      <Title
        className="card-title"
        headingLevel="h2"
      >
        Notification contacts
      </Title>
      <div
        className="support-subtitle"
      >
        Add users to be contacted in the event of notifications about this cluster.
      </div>
    </CardTitle>
    <CardBody
      className="ocm-c-support-notification-contacts__card--body"
    >
      <AddNotificationContactButton
        canEdit={true}
        openModal={[MockFunction]}
      />
      <Connect(NotificationContactsCard)
        addContactResponse={Object {}}
        addNotificationToaster={[MockFunction]}
        clearDeleteNotificationContacts={[MockFunction]}
        clearNotificationContacts={[MockFunction]}
        deleteContactResponse={Object {}}
        deleteNotificationContact={[MockFunction]}
        getNotificationContacts={[MockFunction]}
        hasContacts={false}
        isDisabled={false}
        notificationContacts={
          Object {
            "contacts": Array [],
            "pending": false,
            "subscriptionID": "1iGW3xYbKZAEdZLi207rcA1l0ob",
          }
        }
        subscriptionID="1iGW3xYbKZAEdZLi207rcA1l0ob"
      />
    </CardBody>
  </Card>
  <Card
    className="ocm-c-support-support-cases__card"
  >
    <CardTitle
      className="ocm-c-support-support-cases__card--header"
    >
      <Title
        className="card-title"
        headingLevel="h2"
      >
        Support cases
      </Title>
    </CardTitle>
    <CardBody
      className="ocm-c-support-support-cases__card--body"
    >
      <Connect(SupportCasesCard)
        getSupportCases={[MockFunction]}
        isDisabled={false}
        subscriptionID="1iGW3xYbKZAEdZLi207rcA1l0ob"
        supportCases={
          Object {
            "cases": Array [],
            "pending": false,
            "subscriptionID": "1iGW3xYbKZAEdZLi207rcA1l0ob",
          }
        }
      />
    </CardBody>
  </Card>
</Fragment>
`;
